--- a/appconfig.json
+++ b/appconfig.json
@@ -3,7 +3,7 @@
   "description": "Helps with Amascuts mechanics",
   "author": "Saltea",
   "icon": "https://raw.githubusercontent.com/RSSaltea/amascut-helper/main/icon.png",
-  "main": "https://RSSaltea.github.io/amascut-helper/index.html",
+  "main": "https://rssaltea.github.io/amascut-helper/index.html",
   "category": "PvM",
   "configversion": 1
 }
