--- a/src/appconfig.json
+++ b/src/appconfig.json
@@ -1,7 +1,7 @@
 {
   "appName": "Amascut Helper",
   "description": "Helps with mechanics of Amascut.",
-  "appUrl": "./index.html",
+  "appUrl": "../index.html",
   "version": "1.0.4",
   "configUrl": "./appconfig.json",
   "iconUrl": "./icon.png",
