--- a/src/appconfig.json
+++ b/src/appconfig.json
@@ -3,7 +3,7 @@
   "description": "Helps with mechanics of Amascut.",
   "appUrl": "./index.html",
   "version": "1.0.2",
-  "configUrl": "./appconfig.json",
+  "configUrl": "./src/appconfig.json",
   "iconUrl": "./src/icon.png",
   "defaultWidth": 160,
   "defaultHeight": 188,
