--- a/appconfig.json
+++ b/appconfig.json
@@ -1,6 +1,6 @@
 {
   "appName": "Amascut Helper",
-  "description": "Helps with mechanics of Amascut. Plugin by Saltea, credit to Duk for help.",
+  "description": "Helps with mechanics of Amascut. Plugin by Saltea, credit to Ellam + Duk.",
   "appUrl": "./index.html",
   "version": "1.0.9",
   "configUrl": "./appconfig.json",
