--- a/appconfig.json
+++ b/appconfig.json
@@ -1,14 +1,14 @@
 {
   "appName": "Amascut Helper",
-  "description": "Helps with mechanics of Amascut. Plugin by Saltea, credit to Ellam + Duk.",
+  "description": "Helps with mechanics of Amascut.",
   "appUrl": "./index.html",
-  "version": "1.0.9",
+  "version": "5.0.2",
   "configUrl": "./appconfig.json",
   "iconUrl": "./src/icon.png",
-  "defaultWidth": 120,
-  "defaultHeight": 90,
-  "minWidth": 40,
-  "minHeight": 40,
+  "defaultWidth": 320,
+  "defaultHeight": 400,
+  "minWidth": 200,
+  "minHeight": 150,
   "maxWidth": 1000,
   "maxHeight": 1000,
   "requestHandlers": [],
